ci: bootstrap conda build tooling and missing deps

--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -30,15 +30,29 @@ on:
       - '.github/workflows/CondaPackage.yml'
       - '.github/scripts/ci/**'
   workflow_dispatch:
+    inputs:
+      platforms:
+        description: 'Comma-separated conda platforms (e.g. osx-arm64,linux-64)'
+        required: false
+        default: osx-arm64
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.ref_name }}
   cancel-in-progress: true
 
+env:
+  CI_CONDA_PLATFORMS: osx-arm64
+  OPFLOW_TECIO_REPO_URL: https://github.com/Luohaothu/tecio.git
+  OPFLOW_TECIO_REPO_REF: master
+  OPFLOW_TECIO_RECIPE_PATH: conda/meta.yaml
+  OPFLOW_HYPRE_REPO_URL: ${{ vars.OPFLOW_HYPRE_REPO_URL }}
+  OPFLOW_HYPRE_REPO_REF: ${{ vars.OPFLOW_HYPRE_REPO_REF }}
+  OPFLOW_HYPRE_RECIPE_PATH: ${{ vars.OPFLOW_HYPRE_RECIPE_PATH }}
+
 jobs:
   matrix:
     name: Generate Source Matrix
-    runs-on: macos-14
+    runs-on: ubuntu-24.04
     outputs:
       source_matrix: ${{ steps.generate.outputs.source_matrix }}
     steps:
@@ -48,11 +62,15 @@ jobs:
       - name: Generate matrix
         id: generate
         run: |
-          python3 .github/scripts/ci/generate_matrix.py --mode source --github-output "$GITHUB_OUTPUT"
+          platforms="${{ github.event.inputs.platforms || env.CI_CONDA_PLATFORMS }}"
+          python3 .github/scripts/ci/generate_matrix.py \
+            --mode source \
+            --platforms "$platforms" \
+            --github-output "$GITHUB_OUTPUT"
 
   build_and_test:
-    name: MPI${{ matrix.mpi }} / OMP${{ matrix.openmp }} / ${{ matrix.build_type }}
-    runs-on: macos-14
+    name: ${{ matrix.platform }} / MPI${{ matrix.mpi }} / OMP${{ matrix.openmp }} / ${{ matrix.build_type }}
+    runs-on: ${{ matrix.runner }}
     needs: matrix
     strategy:
       fail-fast: false
@@ -81,4 +99,4 @@ jobs:
             --openmp "${{ matrix.openmp }}" \
             --build-type "${{ matrix.build_type }}" \
             --owner opflow-dev \
-            --platform osx-arm64
+            --platform "${{ matrix.platform }}"
