--- a/.github/workflows/CondaPackage.yml
+++ b/.github/workflows/CondaPackage.yml
@@ -20,15 +20,29 @@ on:
       - 'src/**'
       - 'include/**'
   workflow_dispatch:
+    inputs:
+      platforms:
+        description: 'Comma-separated conda platforms (e.g. osx-arm64,linux-64)'
+        required: false
+        default: osx-arm64
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.ref_name }}
   cancel-in-progress: true
 
+env:
+  CI_CONDA_PLATFORMS: osx-arm64
+  OPFLOW_TECIO_REPO_URL: https://github.com/Luohaothu/tecio.git
+  OPFLOW_TECIO_REPO_REF: master
+  OPFLOW_TECIO_RECIPE_PATH: conda/meta.yaml
+  OPFLOW_HYPRE_REPO_URL: ${{ vars.OPFLOW_HYPRE_REPO_URL }}
+  OPFLOW_HYPRE_REPO_REF: ${{ vars.OPFLOW_HYPRE_REPO_REF }}
+  OPFLOW_HYPRE_RECIPE_PATH: ${{ vars.OPFLOW_HYPRE_RECIPE_PATH }}
+
 jobs:
   matrix:
     name: Generate Package Matrix
-    runs-on: macos-14
+    runs-on: ubuntu-24.04
     outputs:
       package_matrix: ${{ steps.generate.outputs.package_matrix }}
     steps:
@@ -38,11 +52,15 @@ jobs:
       - name: Generate matrix
         id: generate
         run: |
-          python3 .github/scripts/ci/generate_matrix.py --mode package --github-output "$GITHUB_OUTPUT"
+          platforms="${{ github.event.inputs.platforms || env.CI_CONDA_PLATFORMS }}"
+          python3 .github/scripts/ci/generate_matrix.py \
+            --mode package \
+            --platforms "$platforms" \
+            --github-output "$GITHUB_OUTPUT"
 
   package:
-    name: Package / MPI${{ matrix.mpi }} / OMP${{ matrix.openmp }}
-    runs-on: macos-14
+    name: Package / ${{ matrix.platform }} / MPI${{ matrix.mpi }} / OMP${{ matrix.openmp }}
+    runs-on: ${{ matrix.runner }}
     needs: matrix
     strategy:
       fail-fast: false
@@ -70,7 +88,7 @@ jobs:
             --mpi "${{ matrix.mpi }}" \
             --openmp "${{ matrix.openmp }}" \
             --owner opflow-dev \
-            --platform osx-arm64 \
+            --platform "${{ matrix.platform }}" \
             --output-file package_paths.txt
 
       - name: Resolve croot
@@ -83,8 +101,8 @@ jobs:
       - name: Upload package artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: opflow-conda-${{ matrix.mpi }}-${{ matrix.openmp }}
+          name: opflow-conda-${{ matrix.platform }}-${{ matrix.mpi }}-${{ matrix.openmp }}
           path: |
             package_paths.txt
-            ${{ steps.croot.outputs.croot }}/osx-arm64/opflow-*.conda
+            ${{ steps.croot.outputs.croot }}/${{ matrix.platform }}/opflow-*.conda
           if-no-files-found: error
