--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -37,7 +37,7 @@ on:
         default: osx-arm64
 
 concurrency:
-  group: ${{ github.workflow }}-${{ github.head_ref || github.ref_name }}
+  group: ${{ github.workflow }}-${{ github.event_name }}-${{ github.head_ref || github.ref_name }}
   cancel-in-progress: true
 
 env:
