fix: enforce fail-fast dependency checks in conda ci

--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -45,13 +45,6 @@ concurrency:
 env:
   # Default platforms for automatic triggers (push/pull_request).
   CI_CONDA_PLATFORMS: linux-64
-  # Inputs for on-demand dependency bootstrap from source repos.
-  OPFLOW_TECIO_REPO_URL: https://github.com/Luohaothu/tecio.git
-  OPFLOW_TECIO_REPO_REF: master
-  OPFLOW_TECIO_RECIPE_PATH: conda/meta.yaml
-  OPFLOW_HYPRE_REPO_URL: ${{ vars.OPFLOW_HYPRE_REPO_URL }}
-  OPFLOW_HYPRE_REPO_REF: ${{ vars.OPFLOW_HYPRE_REPO_REF }}
-  OPFLOW_HYPRE_RECIPE_PATH: ${{ vars.OPFLOW_HYPRE_RECIPE_PATH }}
 
 jobs:
   matrix:
@@ -99,7 +92,7 @@ jobs:
       - name: Build and test source tree
         shell: bash -l {0}
         run: |
-          # Includes dependency preflight/bootstrap, source build, and ctest.
+          # Enforces fail-fast dependency check, then builds source and runs ctest.
           bash .github/scripts/ci/run_source_job.sh \
             --mpi "${{ matrix.mpi }}" \
             --openmp "${{ matrix.openmp }}" \
