--- a/conda/recipe/meta.yaml
+++ b/conda/recipe/meta.yaml
@@ -28,10 +28,10 @@ requirements:
     - llvm-openmp  # [osx and openmp == 'on']
     - spdlog
     - tbb
-    - amgcl
-    - opflow-hypre * mpi_{{ mpi }}_openmp_{{ openmp }}_*
-    - tecio  # [mpi == 'nompi']
-    - teciompi * mpi_{{ mpi }}_*  # [mpi != 'nompi']
+    - opflow-dev::amgcl
+    - opflow-dev::hypre * mpi_{{ mpi }}_openmp_{{ openmp }}_*
+    - opflow-dev::tecio * mpi_nompi_*  # [mpi == 'nompi']
+    - opflow-dev::teciompi * mpi_{{ mpi }}_*  # [mpi != 'nompi']
     - vtk
     - hdf5 * nompi*  # [mpi == 'nompi']
     - hdf5 * mpi_{{ mpi }}*  # [mpi != 'nompi']
@@ -41,10 +41,10 @@ requirements:
     - llvm-openmp  # [osx and openmp == 'on']
     - spdlog
     - tbb
-    - amgcl
-    - opflow-hypre * mpi_{{ mpi }}_openmp_{{ openmp }}_*
-    - tecio  # [mpi == 'nompi']
-    - teciompi * mpi_{{ mpi }}_*  # [mpi != 'nompi']
+    - opflow-dev::amgcl
+    - opflow-dev::hypre * mpi_{{ mpi }}_openmp_{{ openmp }}_*
+    - opflow-dev::tecio * mpi_nompi_*  # [mpi == 'nompi']
+    - opflow-dev::teciompi * mpi_{{ mpi }}_*  # [mpi != 'nompi']
     - vtk
     - hdf5 * nompi*  # [mpi == 'nompi']
     - hdf5 * mpi_{{ mpi }}*  # [mpi != 'nompi']
