--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -18,7 +18,11 @@ elseif (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
     string(APPEND OPFLOW_EXAMPLE_CXX_FLAGS_RELEASE "/O2 /DNDEBUG")
     string(APPEND OPFLOW_EXAMPLE_CXX_FLAGS_RELWITHDEBINFO "${OPFLOW_EXAMPLE_CXX_FLAGS_RELEASE} /Od")
 elseif (CMAKE_CXX_COMPILER_ID MATCHES "Clang")
-    string(APPEND OPFLOW_EXAMPLE_CXX_FLAGS "-mfma -Wno-narrowing -Wno-deprecated-anon-enum-enum-conversion")
+    set(_opflow_example_clang_flags "-Wno-narrowing -Wno-deprecated-anon-enum-enum-conversion")
+    if (CMAKE_SYSTEM_PROCESSOR MATCHES "^(x86_64|AMD64|amd64|i[3-6]86)$")
+        string(APPEND _opflow_example_clang_flags " -mfma")
+    endif ()
+    string(APPEND OPFLOW_EXAMPLE_CXX_FLAGS "${_opflow_example_clang_flags}")
     string(APPEND OPFLOW_EXAMPLE_CXX_FLAGS_DEBUG "${OPFLOW_EXAMPLE_CXX_FLAGS} -O0 -g")
     string(APPEND OPFLOW_EXAMPLE_CXX_FLAGS_RELEASE "${OPFLOW_EXAMPLE_CXX_FLAGS} -O3 -fopenmp-simd -DNDEBUG")
 endif ()
@@ -51,7 +55,9 @@ add_subdirectory(EqnHandler)
 add_subdirectory(FTCS2D)
 add_subdirectory(TaylorGreen)
 # AMR Cases
-add_subdirectory(AMR)
+if (OPFLOW_HYPRE_HAS_SSTRUCT_FAC)
+    add_subdirectory(AMR)
+endif ()
 add_subdirectory(LevelSet)
 
 add_dependencies(All_CI AllExamples)
