fix: unblock conda ci by making tecio optional
Add OPFLOW_WITH_TECIO toggle and disable TecIO in CI/conda recipe paths.

Guard TecIO-specific test/code paths and allow MPI builds to skip teciompi when unavailable.

--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -97,5 +97,6 @@ jobs:
             --mpi "${{ matrix.mpi }}" \
             --openmp "${{ matrix.openmp }}" \
             --build-type "${{ matrix.build_type }}" \
+            --tecio off \
             --owner opflow-dev \
             --platform "${{ matrix.platform }}"
