--- a/.github/workflows/CondaPreflight.yml
+++ b/.github/workflows/CondaPreflight.yml
@@ -78,5 +78,6 @@ jobs:
           bash .github/scripts/ci/run_preflight_job.sh \
             --mpi "${{ matrix.mpi }}" \
             --openmp "${{ matrix.openmp }}" \
+            --tecio off \
             --owner opflow-dev \
             --platform "${{ matrix.platform }}"
