--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -98,6 +98,7 @@ option(OPFLOW_WITH_MPI "Build OpFlow with MPI support" OFF)
 # utility options
 # IO is always enabled (no variant dimension).
 set(OPFLOW_WITH_HDF5 ON CACHE BOOL "Build OpFlow with HDF5 support (always ON)" FORCE)
+option(OPFLOW_WITH_TECIO "Build OpFlow with TecIO binary/szplt writer support" OFF)
 
 # testing options
 option(OPFLOW_BUILD_TESTS "Build tests" OFF)
@@ -166,7 +167,10 @@ if(OPFLOW_WITH_OPENMP)
     target_link_libraries(opflow INTERFACE OpenMP::OpenMP_C OpenMP::OpenMP_CXX)
 endif()
 
-target_compile_definitions(opflow ${OPFLOW_TARGET_SCOPE} OPFLOW_WITH_HDF5 OPFLOW_WITH_VTK)
+target_compile_definitions(opflow ${OPFLOW_TARGET_SCOPE}
+    OPFLOW_WITH_HDF5
+    OPFLOW_WITH_VTK
+    $<$<BOOL:${OPFLOW_WITH_TECIO}>:OPFLOW_WITH_TECIO>)
 find_package(spdlog CONFIG REQUIRED)
 target_link_libraries(opflow ${OPFLOW_TARGET_SCOPE} spdlog::spdlog)
 
@@ -201,14 +205,24 @@ if(OPFLOW_HYPRE_HAS_SSTRUCT_FAC)
     target_compile_definitions(opflow ${OPFLOW_TARGET_SCOPE} OPFLOW_HYPRE_HAS_SSTRUCT_FAC)
 endif()
 
-# TecIO (serial or MPI)
-if(OPFLOW_WITH_MPI)
-    find_package(teciompi CONFIG REQUIRED)
-    target_compile_definitions(opflow ${OPFLOW_TARGET_SCOPE} TECIOMPI)
-    target_link_libraries(opflow ${OPFLOW_TARGET_SCOPE} tecio::teciompi)
-else()
-    find_package(tecio CONFIG REQUIRED)
-    target_link_libraries(opflow ${OPFLOW_TARGET_SCOPE} tecio::tecio)
+# TecIO (optional serial or MPI extension)
+set(OPFLOW_USE_TECIOMPI OFF)
+if(OPFLOW_WITH_TECIO)
+    if(OPFLOW_WITH_MPI)
+        find_package(teciompi CONFIG QUIET)
+        if(teciompi_FOUND AND TARGET tecio::teciompi)
+            set(OPFLOW_USE_TECIOMPI ON)
+            target_compile_definitions(opflow ${OPFLOW_TARGET_SCOPE} TECIOMPI)
+            target_link_libraries(opflow ${OPFLOW_TARGET_SCOPE} tecio::teciompi)
+        else()
+            find_package(tecio CONFIG REQUIRED)
+            message(WARNING "teciompi not found; falling back to serial tecio.")
+            target_link_libraries(opflow ${OPFLOW_TARGET_SCOPE} tecio::tecio)
+        endif()
+    else()
+        find_package(tecio CONFIG REQUIRED)
+        target_link_libraries(opflow ${OPFLOW_TARGET_SCOPE} tecio::tecio)
+    endif()
 endif()
 
 # VTK is required (IO always on).
@@ -679,12 +693,16 @@ _opflow_print_dependency("TBB" TRUE "${_opflow_dep_tbb_path}")
 _opflow_target_location(_opflow_dep_hypre_path HYPRE::HYPRE)
 _opflow_print_dependency("HYPRE" TRUE "${_opflow_dep_hypre_path}")
 
-if(OPFLOW_WITH_MPI)
-    _opflow_target_location(_opflow_dep_tecio_path tecio::teciompi)
-    _opflow_print_dependency("tecio (MPI)" TRUE "${_opflow_dep_tecio_path}")
+if(OPFLOW_WITH_TECIO)
+    if(OPFLOW_USE_TECIOMPI)
+        _opflow_target_location(_opflow_dep_tecio_path tecio::teciompi)
+        _opflow_print_dependency("tecio (MPI)" TRUE "${_opflow_dep_tecio_path}")
+    else()
+        _opflow_target_location(_opflow_dep_tecio_path tecio::tecio)
+        _opflow_print_dependency("tecio" TRUE "${_opflow_dep_tecio_path}")
+    endif()
 else()
-    _opflow_target_location(_opflow_dep_tecio_path tecio::tecio)
-    _opflow_print_dependency("tecio" TRUE "${_opflow_dep_tecio_path}")
+    _opflow_print_dependency("tecio" FALSE "disabled")
 endif()
 
 _opflow_normalize_dependency_location(_opflow_dep_vtk_path "${VTK_LIBRARIES};${VTK_INCLUDE_DIRS};${VTK_CMAKE_DIR};${VTK_DIR}")
