--- a/cmake/opflowConfig.cmake.in
+++ b/cmake/opflowConfig.cmake.in
@@ -23,6 +23,8 @@ include(CMakeFindDependencyMacro)
 
 set(OPFLOW_WITH_OPENMP @OPFLOW_WITH_OPENMP@)
 set(OPFLOW_WITH_MPI @OPFLOW_WITH_MPI@)
+set(OPFLOW_WITH_TECIO @OPFLOW_WITH_TECIO@)
+set(OPFLOW_USE_TECIOMPI @OPFLOW_USE_TECIOMPI@)
 
 # Core dependencies
 find_dependency(spdlog CONFIG REQUIRED)
@@ -38,11 +40,13 @@ if(OPFLOW_WITH_MPI)
     find_dependency(MPI REQUIRED)
 endif()
 
-# TecIO (serial or MPI)
-if(OPFLOW_WITH_MPI)
-    find_dependency(teciompi CONFIG REQUIRED)
-else()
-    find_dependency(tecio CONFIG REQUIRED)
+# TecIO (optional serial or MPI extension)
+if(OPFLOW_WITH_TECIO)
+    if(OPFLOW_USE_TECIOMPI)
+        find_dependency(teciompi CONFIG REQUIRED)
+    else()
+        find_dependency(tecio CONFIG REQUIRED)
+    endif()
 endif()
 
 # VTK is always required.
